[gd_scene load_steps=19 format=3 uid="uid://ca3emwpdwnkxa"]

[ext_resource type="Script" path="res://npcs/pedestrian.gd" id="1_xrfda"]
[ext_resource type="PackedScene" uid="uid://pntlr1220y5l" path="res://Player/dummy_rig_reimport.tscn" id="4_w8kdd"]
[ext_resource type="AudioStream" uid="uid://bx0t7f2nuk2lr" path="res://Player/Sounds/03_Step_grass_03.wav" id="5_476gx"]
[ext_resource type="AudioStream" uid="uid://cbcb2d63weegs" path="res://Player/Sounds/45_Landing_01.wav" id="6_0wtlt"]
[ext_resource type="AudioStream" uid="uid://idxb057hxed3" path="res://assets/audio/Hanna-Barbera SFX/boink_1.wav" id="7_e17hn"]
[ext_resource type="AudioStream" uid="uid://b8tdvgjmmpv47" path="res://assets/audio/Hanna-Barbera SFX/boink_2.wav" id="8_ptasr"]
[ext_resource type="AudioStream" uid="uid://cx0m1wbygv5mw" path="res://assets/audio/Hanna-Barbera SFX/bonk_9.wav" id="9_wcphp"]
[ext_resource type="AudioStream" uid="uid://cwuu7jpjcrdyo" path="res://assets/audio/Hanna-Barbera SFX/bonk_1.wav" id="10_322cg"]
[ext_resource type="AudioStream" uid="uid://ynmb0hl5r6lx" path="res://assets/audio/Hanna-Barbera SFX/bonk_2.wav" id="11_r3oyd"]
[ext_resource type="AudioStream" uid="uid://tibe0ss0swb8" path="res://assets/audio/Hanna-Barbera SFX/bonk_3.wav" id="12_aokrf"]
[ext_resource type="AudioStream" uid="uid://cg28mym3kk502" path="res://assets/audio/Hanna-Barbera SFX/bonk_4.wav" id="13_wrm5d"]
[ext_resource type="AudioStream" uid="uid://b3jp5un41imor" path="res://assets/audio/Hanna-Barbera SFX/bonk_5.wav" id="14_gsmop"]
[ext_resource type="AudioStream" uid="uid://cq7yfpfrco8bm" path="res://assets/audio/Hanna-Barbera SFX/bonk_6.wav" id="15_sc0mr"]
[ext_resource type="AudioStream" uid="uid://bvnl2ljqc2blq" path="res://assets/audio/Hanna-Barbera SFX/bonk_7.wav" id="16_2q0w0"]
[ext_resource type="AudioStream" uid="uid://cht8so4yprjdb" path="res://assets/audio/Hanna-Barbera SFX/bonk_8.wav" id="17_1o1dn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8pv8i"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_n0dbl"]
radius = 0.2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_508yr"]
streams_count = 11
stream_0/stream = ExtResource("7_e17hn")
stream_1/stream = ExtResource("8_ptasr")
stream_2/stream = ExtResource("10_322cg")
stream_3/stream = ExtResource("11_r3oyd")
stream_4/stream = ExtResource("12_aokrf")
stream_5/stream = ExtResource("13_wrm5d")
stream_6/stream = ExtResource("14_gsmop")
stream_7/stream = ExtResource("15_sc0mr")
stream_8/stream = ExtResource("16_2q0w0")
stream_9/stream = ExtResource("17_1o1dn")
stream_10/stream = ExtResource("9_wcphp")

[node name="Pedestrian" type="RigidBody3D"]
collision_layer = 16
collision_mask = 4307
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 50.0
continuous_cd = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_xrfda")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 2.0
avoidance_enabled = true
height = 2.0
radius = 0.75
neighbor_distance = 10.0
time_horizon_agents = 3.0
time_horizon_obstacles = 1.0
max_speed = 1.5
debug_use_custom = true

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8pv8i")

[node name="GroundCollider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
collision_layer = 0
collision_mask = 195

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundCollider"]
shape = SubResource("SphereShape3D_n0dbl")

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="DummyRigAnimated" parent="CharacterRotationRoot" instance=ExtResource("4_w8kdd")]

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_476gx")
volume_db = 1.0

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_0wtlt")
volume_db = 1.0

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_508yr")
volume_db = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_velocity_computed"]
